--- a/argo-workflows/okd-workflows/50-build-okd-from-scratch.yaml
+++ b/argo-workflows/okd-workflows/50-build-okd-from-scratch.yaml
@@ -227,6 +227,7 @@ spec:
             {"buildConfig":"baremetal-installer","overrideRepoUrl":"","overrideBranch":""},
             {"buildConfig":"installer-artifacts","overrideRepoUrl":"","overrideBranch":""},
             {"buildConfig":"installer","overrideRepoUrl":"","overrideBranch":""},
+            {"buildConfig":"installer-terraform-providers","overrideRepoUrl":"","overrideBranch":""},
             {"buildConfig":"hyperkube","overrideRepoUrl":"","overrideBranch":""}
           ], [
             {"buildConfig":"agent-installer-api-server","overrideRepoUrl":"","overrideBranch":""},
