--- a/buildconfigs/10-ovirt-installer.yaml
+++ b/buildconfigs/10-ovirt-installer.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     resources-profile: high
     change-build-arg-tags: "true"
+    skip-installer-cli: "true"
 spec:
   source:
     type: Git
