--- a/buildconfigs/30-ovn-kubernetes.yaml
+++ b/buildconfigs/30-ovn-kubernetes.yaml
@@ -9,12 +9,18 @@ spec:
       uri: 'https://github.com/openshift/ovn-kubernetes'
       ref: release-4.15
     contextDir: .
-    images: []
+    images:
+      - from:
+          kind: ImageStreamTag
+          name: 'release:forked-dockerfiles'
+        paths:
+          - sourcePath: /code/ovn-kubernetes/Dockerfile.mingw
+            destinationDir: "."
   strategy:
     type: Docker
     dockerStrategy:
       imageOptimizationPolicy: SkipLayers
-      dockerfilePath: Dockerfile.rhel9
+      dockerfilePath: Dockerfile.mingw
       from:
         kind: "ImageStreamTag"
         name: "release:ovn-kubernetes-base"
