--- a/buildconfigs/30-network-tools.yaml
+++ b/buildconfigs/30-network-tools.yaml
@@ -14,7 +14,7 @@ spec:
           kind: ImageStreamTag
           name: 'release:ovn-kubernetes'
         as:
-          - registry.ci.openshift.org/ocp/4.13:ovn-kubernetes-rhel-9
+          - registry.ci.openshift.org/ocp/4.15:ovn-kubernetes
   strategy:
     type: Docker
     dockerStrategy:
