--- a/buildconfigs/10-installer-terraform-providers.yaml
+++ b/buildconfigs/10-installer-terraform-providers.yaml
@@ -27,4 +27,4 @@ spec:
   output:
     to:
       kind: ImageStreamTag
-      name: 'release:installer-terraform-providers'
+      name: 'tools:installer-terraform-providers'
