--- a/buildconfigs/10-installer-altinfra.yaml
+++ b/buildconfigs/10-installer-altinfra.yaml
@@ -1,12 +1,16 @@
 apiVersion: build.openshift.io/v1
 kind: BuildConfig
 metadata:
-  name: agent-installer-utils
+  name: installer-altinfra
+  labels:
+    change-build-arg-tags: "true"
+    resources-profile: high
+    skip-installer-cli: "true"
 spec:
   source:
     type: Git
     git:
-      uri: 'https://github.com/openshift/agent-installer-utils'
+      uri: 'https://github.com/openshift/installer'
       ref: release-4.15
     contextDir: .
     images: []
@@ -14,11 +18,14 @@ spec:
     type: Docker
     dockerStrategy:
       imageOptimizationPolicy: SkipLayers
-      dockerfilePath: images/Dockerfile.ocp
+      dockerfilePath: images/installer-altinfra/Dockerfile.ci
+      buildArgs:
+          - name: "TAGS"
+            value: "scos"
       from:
         kind: "ImageStreamTag"
         name: "release:base"
   output:
     to:
       kind: ImageStreamTag
-      name: 'release:agent-installer-utils'
+      name: 'release:installer-altinfra'
