--- a/buildconfigs/10-openstack-cluster-api-controllers.yaml
+++ b/buildconfigs/10-openstack-cluster-api-controllers.yaml
@@ -14,7 +14,7 @@ spec:
     type: Docker
     dockerStrategy:
       imageOptimizationPolicy: SkipLayers
-      dockerfilePath: Dockerfile.ocp
+      dockerfilePath: Dockerfile.rhel
       from:
         kind: "ImageStreamTag"
         name: "release:base"
