--- a/pipelines/01-new-release-task.yaml
+++ b/pipelines/01-new-release-task.yaml
@@ -20,7 +20,7 @@ spec:
       script: |
         oc adm release new \
             --registry-config=$(workspaces.credentials.path)/.dockerconfigjson \
-            --from-image-stream release \
+            --from-image-stream release-4.15 \
             --insecure=true \
             --mirror $(params.release-mirror-location) \
             --to-image $(params.release-image) \
